[package]
name = "planetrs"
version = "0.1.0"
authors = ["Vagdish/Adau <adrien.aubourg@gmail.com>"]

[dependencies]
serde = "1"
serde_derive = "1"
serde_yaml = "0.7"
serde_json = "1"
chrono = {version = "0.4", features = ["serde"]}
curl = "0.4"
rss = "0.4"
atom_syndication = "0.5"
tera = "0.10"
uuid = { version = "0.5", features = ["v5"] }
clap = "2.29"
